# IIB-Project

./: .gitignore  .python-version.swp  pyproject.toml  will_test.py
cpp/: cd_equalizer.cpp  constants.hpp  cpx_fixed.hpp
data/temp/: test_input.h5
python/iib_project/: .channel.py.swp  .channel.py.un~  .modulator.py.un~  adaptive_equalizer.py  carrier_recovery.py  cd_equalizer.py  channel.py  clock_recovery.py  cordic.py  demodulator.py  fft_fp.py  modulator.py  plotting.py  utils.py
results/adaptive_and_carrier_recovery/: results.py
results/adaptive_equalizer/: results.py
results/carrier_recovery/: results.py
results/cd_equalizer/: results.py
tests/: test_adaptive_equalizer.py  test_carrier_recovery.py  test_cd_equalizer.py  test_cordic.py  test_fft_fp.py  test_modulator.py
