[project]
name = "iib-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fixedpoint>=1.0.1",
    "fxpmath>=0.4.9",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
]

[tool.setuptools.packages.find]
where = ["python"]

