[project]
name = "iib-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fixedpoint>=1.0.1",
    "fxpmath>=0.4.9",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["python"]

